--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -23,7 +23,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        tools:context=".ProductActivity">
+        tools:context=".view.ProductActivity">
 
         <ImageView
             android:id="@+id/imageView"
