--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -8,7 +8,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        tools:context=".ui.ProductFragment">
+        tools:context=".view.ui.ProductFragment">
 
         <ImageView
             android:id="@+id/imageView"
