--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.projectkien500k.ui.home.HomeFragment"
+        android:name="com.example.projectkien500k.view.ui.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" >
 
@@ -18,7 +18,7 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.projectkien500k.ui.dashboard.DashboardFragment"
+        android:name="com.example.projectkien500k.view.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" >
         <action
@@ -28,7 +28,7 @@
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.example.projectkien500k.ui.notifications.NotificationsFragment"
+        android:name="com.example.projectkien500k.view.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" >
         <action
@@ -37,12 +37,12 @@
     </fragment>
     <fragment
         android:id="@+id/productFragment"
-        android:name="com.example.projectkien500k.ui.ProductFragment"
+        android:name="com.example.projectkien500k.view.ui.ProductFragment"
         android:label="fragment_product"
         tools:layout="@layout/fragment_product" />
     <fragment
         android:id="@+id/navigation_profile"
-        android:name="com.example.projectkien500k.ui.ProfileFragment"
+        android:name="com.example.projectkien500k.view.ui.ProfileFragment"
         android:label="profile_fragment"
         tools:layout="@layout/fragment_profile" />
 </navigation>
