push hộ bố mầy cái nào huhu

--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -25,8 +25,8 @@
         android:layout_marginStart="6dp"
         android:ellipsize="end"
         android:maxLines="2"
+        android:text="name nè "
         android:paddingRight="15dp"
-        android:text="Tuổi trẻ dáng giá bao nhiều nhà nước chán vl hôm nay mình cảm giác ngón bức khó chiu vcl"
         android:textColor="@color/colorTextTitle"
         app:layout_constraintEnd_toStartOf="@+id/buttonRemove"
         app:layout_constraintHorizontal_bias="1.0"
