--- a/app/src/main/res/layout/activity_list_product.xml
+++ b/app/src/main/res/layout/activity_list_product.xml
@@ -4,17 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.ui.dashboard.DashboardFragment">
-
+    tools:context=".view.ListProductActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcProductType"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:id="@+id/rclistProduct"
+        android:layout_width="409dp"
+        android:layout_height="729dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
