--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="product"
-            type="com.example.projectkien500k.model.viewmodel.ViewProduct" />
+            type="com.example.projectkien500k.model.data.Product" />
     </data>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
