--- a/app/src/main/res/layout/item_detailbill.xml
+++ b/app/src/main/res/layout/item_detailbill.xml
@@ -46,6 +46,9 @@
         android:id="@+id/txtdes"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:maxLines="3"
+        android:ellipsize="end"
+        android:minLines="1"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
