--- a/app/src/main/res/layout/item_product_type.xml
+++ b/app/src/main/res/layout/item_product_type.xml
@@ -30,7 +30,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center_horizontal"
-                android:maxLines="2"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:padding="2dp"
                 android:paddingTop="5dp"
                 android:text="@{productType.name}"
